# workshop_streamlit_coleta

./: app.py  meu_arquivo.csv  pyproject.toml  survey_data.csv
exemplo/: exemplo_forms_csv.py
